_build/html/reports/exoprobas.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.9/3.9.13/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
#importation des librairies
import matplotlib.pyplot as plt import math
# initialisation
N=41 n=[]

Q=[]
QQ=1
#boucle et remplissage de la probaQ
for j in range(1,N):
    n.append(j)
    QQ=QQ*(1-(j-1)/365) 
    Q.append(QQ*100) 
plt.figure()
plt.subplot(211)
plt.plot(n,Q,color=’red’,label=’proba dates differentes’)
plt.plot(n,Q,’k+’)
plt.xlabel(’entier n’)
plt.ylabel(’proba Q en %’)
plt.title(’probleme des anniversaires’)
plt.grid(True)
plt.legend()
plt.subplot(212)
plt.plot(n,Q,color=’red’,label=’proba dates differentes’)
plt.plot(n,Q,’k+’)
plt.xlim(15,25)
plt.ylim(40,70)
plt.ylabel(’proba Q en %’) 
plt.grid(True) 
plt.legend()
plt.show()
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    import matplotlib.pyplot as plt import math[0m
[0m                                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-c305569d2e9f>, line 2)

